Code refactor and few additions to lambdas